Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-5029

Crash in MariaDB 5.5.33 with .frm from older MariaDB release

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Critical
    • Resolution: Fixed
    • 5.5.33
    • 5.5.33a
    • None
    • None

    Description

      An frm file found "in the wild" had 0x2b as its 4th byte. This "works" fine in MariaDB <5.5.33 but causes crashes in MariaDB 5.5.33. Changing this byte in the .frm file to 0x2a allows the table to be used in MariaDB 5.5.33, but the first use gives this warning:

      | Note  | 1194 | Zerofilling moved table ./test/kb3_domains |

      It is not clear how this .frm file was originally created, but I am assured that it was generated by MariaDB.

      Stacktrace:

      ??:0(my_print_stacktrace)[0xa8962e]
      ??:0(handle_fatal_signal)[0x6d002b]
      ??:0(??)[0x7fa17becb500]
      ??:0(TABLE_SHARE::destroy())[0x61da55]
      ??:0(my_hash_delete)[0xa6ea34]
      ??:0(_Z15get_table_shareP3THDP10TABLE_LISTPcjjPij.clone.7)[0x541ae7]
      ??:0(open_table(THD*, TABLE_LIST*, st_mem_root*, Open_table_context*))[0x54ac1d]
      ??:0(open_tables(THD*, TABLE_LIST**, unsigned int*, unsigned int, Prelocking_strategy*))[0x54bf01]
      ??:0(open_and_lock_tables(THD*, TABLE_LIST*, bool, unsigned int, Prelocking_strategy*))[0x54cc54]
      ??:0(execute_sqlcom_select(THD*, TABLE_LIST*))[0x585915]
      ??:0(mysql_execute_command(THD*))[0x58c0f6]
      ??:0(mysql_parse(THD*, char*, unsigned int, Parser_state*))[0x58ee19]
      ??:0(dispatch_command(enum_server_command, THD*, char*, unsigned int))[0x590270]
      ??:0(do_handle_one_connection(THD*))[0x649c1f]
      ??:0(handle_one_connection)[0x649cbc]
      ??:0(??)[0x7fa17bec3851]
      ??:0(??)[0x7fa17a83790d]

      Attachments

        Issue Links

          Activity

            People

              serg Sergei Golubchik
              kolbe Kolbe Kegel (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: