MDEV-5029 Crash in MariaDB 5.5.33 with .frm from older MariaDB release

don't set TABLE_SHARE::keys before TABLE_SHARE::key_info is set,
otherwise an error might leave only the first property set and it will
confuse TABLE_SHARE::destroy()